<?xml version="1.0"?>
<package format="2">
  <name>hdl_global_localization</name>
  <version>0.0.0</version>
  <description>The hdl_global_localization package</description>

  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>

  <export>
  </export>
</package>
