<?xml version="1.0"?>
<package format="2">
  <name>kit_perception</name>
  <version>0.0.1</version>
  <description>
    Messages for interfacing with various computer vision pipelines, such as
    object detectors.
  </description>

  <author email="fudongxu@kit.com">Kit</author>
  <maintainer email="fudongxu@kit.com">Kit</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
</package>
