<?xml version="1.0"?>
<package format="2">
  <name>live_slam</name>
  <version>0.0.0</version>
  <description>The live_slam package</description>

  <maintainer email="hfzhao20@mails.jlu.edu.cn">Zhao Huanfeng</maintainer>

  <license>TODO</license>

  <author>Zhao Huanfeng</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  
  <build_depend>tf</build_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>tf_conversions</build_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <exec_depend>tf_conversions</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <build_depend>nav_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_generation</exec_depend>
  
  <build_depend>message_runtime</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>visualization_msgs</exec_depend>
  
	<build_depend>cv_bridge</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  
	<build_depend>pcl_conversions</build_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <exec_depend>pcl_conversions</exec_depend>
  
  <build_depend>pcl_conversions</build_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <build_depend>PCL</build_depend>
  <build_export_depend>PCL</build_export_depend>
  <exec_depend>PCL</exec_depend>
  
  <build_depend>OpenCV</build_depend>
  <build_export_depend>OpenCV</build_export_depend>
  <exec_depend>OpenCV</exec_depend>
  
  <build_depend>GTSAM</build_depend>
  <build_export_depend>GTSAM</build_export_depend>
  <exec_depend>GTSAM</exec_depend>

  <export>
  </export>
</package>
