<?xml version="1.0"?>
<package>
  <name>gnss_comm</name>
  <version>1.0.0</version>
  <description>Definitions and utility functions for GNSS</description>

  <maintainer email="shaozu.cao@gmail.com">CAO Shaozu</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
