<?xml version="1.0"?>
<package>
  <name>lab_slam</name>
  <version>0.0.0</version>
  <description>
    This is a Lidar SLAM by JinTongxing aiming to incorporate well known methods.
  </description>

  <maintainer email="jintongxing@neolix.cn">jintongxing</maintainer>

  <license>BSD</license>

  <author email="jintongxing@neolix.cn">jintongxing</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>

  <export>
  </export>
</package>
